include $(top_srcdir)/misc/Makefile.common

if INSTALL_M4
m4datadir = $(ACLOCAL_DIR)
else
m4datadir = $(datadir)/aclocal
endif

m4data_DATA = xine.m4

EXTRA_DIST = \
	attributes.m4 \
	audio_out.m4 \
	decoders.m4 \
	directx.m4 \
	gas.m4 \
	input.m4 \
	macosx.m4 \
	misc.m4 \
	objc.m4 \
	pkg.m4 \
	programs.m4 \
	pthreads.m4 \
	symbol.m4 \
	summary.m4 \
	types.m4 \
	video_out.m4 \
	xine.m4
