include $(top_srcdir)/misc/Makefile.common

# Order is important be careful changing SUBDIRS
SUBDIRS = \
	xine-utils \
	xine-engine \
	audio_out \
	video_out \
	dxr3 \
	input \
	demuxers \
	libffmpeg \
	libmpeg2 \
	libspudec \
	libspucc \
	libspucmml \
	libspudvb \
	libsputext \
	libw32dll \
	libxinevdec \
	libxineadec \
	libreal \
	libfaad \
	post \
	combined \
	vdr
