include $(top_srcdir)/misc/Makefile.common

# Order is important be careful changing SUBDIRS
SUBDIRS = \
	xine-utils \
	xine-engine \
	audio_out \
	audio_dec \
	video_out \
	video_dec \
	dxr3 \
	input \
	demuxers \
	libffmpeg \
	libmpeg2 \
	libspudec \
	libspucc \
	libspucmml \
	libspudvb \
	libsputext \
	libw32dll \
	libreal \
	post \
	combined \
	vdr
