include $(top_srcdir)/misc/Makefile.common

# Order is important be careful changing SUBDIRS
SUBDIRS = \
	xine-utils \
	xine-engine \
	audio_out \
	video_out \
	dxr3 \
	input \
	demuxers \
	libffmpeg \
	libmpeg2 \
	libmpeg2new \
	liba52 \
	libspudec \
	libspucc \
	libspucmml \
	libspudvb \
	libspuhdmv \
	libsputext \
	libdts \
	libmad \
	libw32dll \
	libxinevdec \
	libxineadec \
	libreal \
	libfaad \
        libmusepack \
	libvdpau \
	post \
	combined
