EXTRA_DIST = version.h.in

xineincludedir = $(includedir)/xine
xineinclude_HEADERS = version.h buffer.h metronom.h configfile.h vo_scale.h \
	audio_out.h resample.h video_out.h xine_internal.h spu_decoder.h \
	video_overlay.h osd.h spu.h scratch.h xine_plugin.h xineintl.h \
	plugin_catalog.h audio_decoder.h video_decoder.h post.h \
	io_helper.h broadcaster.h info_helper.h refcounter.h alphablend.h \
	demux.h input_plugin.h attributes.h compat.h xine_buffer.h \
	xineutils.h xmllexer.h xmlparser.h list.h array.h sorted_array.h \
	pool.h ring_buffer.h os_types.h input_vdr.h
