include $(top_srcdir)/misc/Makefile.common

fontdir = $(XINE_FONTPATH)
font_DATA = \
	cetus-16.xinefont.gz \
	cetus-20.xinefont.gz \
	cetus-24.xinefont.gz \
	cetus-32.xinefont.gz \
	cetus-48.xinefont.gz \
	cetus-64.xinefont.gz \
	cc-16.xinefont.gz \
	cc-20.xinefont.gz \
	cc-24.xinefont.gz \
	cc-32.xinefont.gz \
	cc-48.xinefont.gz \
	cc-64.xinefont.gz \
	cci-16.xinefont.gz \
	cci-20.xinefont.gz \
	cci-24.xinefont.gz \
	cci-32.xinefont.gz \
	cci-48.xinefont.gz \
	cci-64.xinefont.gz \
	mono-16.xinefont.gz \
	mono-20.xinefont.gz \
	mono-24.xinefont.gz \
	mono-32.xinefont.gz \
	mono-48.xinefont.gz \
	mono-64.xinefont.gz \
	sans-16.xinefont.gz \
	sans-20.xinefont.gz \
	sans-24.xinefont.gz \
	sans-32.xinefont.gz \
	sans-48.xinefont.gz \
	sans-64.xinefont.gz \
	serif-16.xinefont.gz \
	serif-20.xinefont.gz \
	serif-24.xinefont.gz \
	serif-32.xinefont.gz \
	serif-48.xinefont.gz \
	serif-64.xinefont.gz 

#
# font used for osd
#
EXTRA_DIST = cetus.ttf README.cetus $(data_DATA)
